--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "http": "^0.0.0",
     "multer": "^1.2.0",
     "mongodb": "^2.2.11",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+      "cors":"^2.8.1"
   },
   "devDependencies": {},
   "scripts": {
