--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "multer": "^1.2.0",
     "mongodb": "^2.2.11",
     "path": "^0.12.7",
-      "cors":"^2.8.1"
+      "cors":"^2.8.1",
+      "cloudinary":"^1.4.3"
   },
   "devDependencies": {},
   "scripts": {
