--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "bank of memes",
   "main": "server.js",
   "dependencies": {
-    "cors": "^2.8.1",
-    "cloudinary": "^1.4.3",
     "body-parser": "^1.15.2",
-    "fs": "^0.0.1-security",
     "clarifai": "^2.0.10",
+    "client-sessions": "^0.7.0",
+    "cloudinary": "^1.4.3",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "fs": "^0.0.1-security",
     "http": "^0.0.0",
+    "http-auth": "^3.0.1",
     "mongodb": "^2.2.11",
     "multer": "^1.2.0",
     "path": "^0.12.7"
